--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
     "firebase": "^5.6.0",
+    "moment": "^2.22.2",
+    "ngx-material-timepicker": "^2.10.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
